feat: adjust css

--- a/test/demo.html
+++ b/test/demo.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 
 <head>
-  <title data-react-helmet="true">我的书单</title>
+  <title data-react-helmet="true">github comment demo</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 
     </div>
 
-    <script src="http://localhost:5000/bundle.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="localhost:5000"></script>
+    <script src="http://localhost:5000/javascripts/github-comment-react.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="localhost:5000"></script>
   </div>
 
 </body>
