chore: ignore build js

--- a/test/demo.html
+++ b/test/demo.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
-
-<head>
-  <title data-react-helmet="true">github comment demo</title>
-</head>
-
-<body>
-  <div id="content" class="container">
-    <div id="github-comments">
-
+  <head>
+    <title data-react-helmet="true">github comment demo</title>
+  </head>
+  <body>
+    <div id="content" class="container">
+      <div id="github-comments"></div>
+      <script src="http://localhost:5000/javascripts/github-comment-react.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="localhost:5000"></script>
     </div>
-
-    <script src="http://localhost:5000/javascripts/github-comment-react.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="localhost:5000"></script>
-  </div>
-
-</body>
-
+  </body>
 </html>
