style: update ui style

--- a/test/demo.html
+++ b/test/demo.html
@@ -6,7 +6,7 @@
   <body>
     <div id="content" class="container">
       <div id="github-comments"></div>
-      <script src="http://github-comment.songofcode.com/javascripts/github-comment-react.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="github-comment.songofcode.com"></script>
+      <script src="../client/github-comment.js" id="github-comment" data-username="teddy-ma" data-repo="sliders" data-page-id="1" data-server-url="github-comment.songofcode.com"></script>
     </div>
   </body>
 </html>
