get referer login page

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
 
     </div>
 
-    <script id="github-comment" data-theme="green" data-username="teddy-ma" data-ssl="true" data-repo="how-to-learn-emacs-chinese-edition" data-page-id="1">
+    <script id="github-comment" data-server-url="localhost:5000" data-theme="green" data-username="teddy-ma" data-repo="how-to-learn-emacs-chinese-edition" data-page-id="1">
     </script>
   </body>
 </html>
