init app with meta data

--- a/github-comment/public/index.html
+++ b/github-comment/public/index.html
@@ -25,7 +25,21 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
+
+    <div id="github-comments">
+
+    </div>
+
+    <script id="github-comment"
+      data-server-url="localhost:5000"
+      data-theme="green"
+      data-username="teddy-ma"
+      data-repo="github-comment"
+      data-page-id="1">
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
