fix create issue

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
       data-theme="green"
       data-username="teddy-ma"
       data-repo="github-comment"
-      data-page-id="10">
+      data-page-id="blablablabla">
     </script>
     <!--
       This HTML file is a template.
